# GazeDeck

./: .gitignore  AGENT_RULES.md  APRILTAGS_README.md  GazedeckConsole.spec  Makefile  README.md  apriltags_config_generator.py  build_console_app.py  build_nuitka.py  config_utils.py  console_app.py  console_app.spec  device_manager.py  gaze_config.py  gazedeck_bridge.py  generate_apriltags.py  main.py  pyproject.toml  run_executable.bat  test_client.html  test_client.py  test_marker.py  test_numpy_warnings.py  websocket_server.py
.cursor/rules/: COORDINATES.mdc  READABLE_PYTHON_APP.mdc  TEST_FILES.mdc
apriltags/: apriltag_config.yaml
gazedeck/: Makefile  README.md  __init__.py  apriltag_generator.py  config.py  gui.py  main.py  marker_test.html  pupil_integration.py  pyproject.toml  test_marker_conflicts.py  websocket_server.py  websocket_test.html
gazedeck/adapters/: __init__.py
gazedeck/adapters/apriltag/: __init__.py  layouts.py  tracker.py
gazedeck/adapters/pupil_labs/: __init__.py  device.py  device_provider.py  frames.py  gaze.py  streaming.py  timebase.py
gazedeck/adapters/ws/: __init__.py  sink.py
gazedeck/cli/: command_generate_surface.py  command_mock.py  command_stream.py  command_test_device_discovery.py  command_test_surface_layout_discovery.py  prompt_device_labeling.py  prompt_surface_layout_labeling.py  setup_device_labeling.py  setup_labeled_devices.py  setup_labeled_surface_layouts.py
gazedeck/config/: default.yaml
gazedeck/config/generator/marker/: __init__.py  __main__.py  cli.py  generator.py  test_conflicts.py
gazedeck/config/markers/: screen_4tags.example.json
gazedeck/config/markers/base/: config.json
gazedeck/core/: binary_messages.py  camera_distortion.py  camera_models.py  cv_visualizer.py  device_discovery.py  device_labeling.py  device_mocking.py  device_senzors.py  gaze_filter.py  gaze_mapper.py  geometry.py  homography_detection.py  homography_store.py  mapping.py  marker_detection.py  queues.py  state.py  streaming_gaze_mapping.py  surface_layout_discovery.py  surface_layout_generation.py  surface_layout_labeling.py  surface_tracking.py  types.py  websocket_server.py
gazedeck/ports/: __init__.py  device_provider.py  frame_provider.py  gaze_provider.py  pose_provider.py  sink.py
gazedeck/runners/: __init__.py  single_process.py
gazedeck/tests/: test_fpskip.py  test_mapping.py  test_runner_mocked.py  test_store.py
output/surface1/: surface_layout.yaml
surface/: README.md  __init__.py  config_generator.py  config_loader.py  example_usage.py  surface.py
surface_layout/: __init__.py  __main__.py  generate_surface.py
tests/: test_device_mocking.py  test_websocket_integration.py  test_websocket_server.py
web/: cv_viewer.html
