[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gazedeck"
version = "0.1.0"
description = "Plane-relative gaze bridge over WebSocket (fixation.* + mark)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "websockets>=15.0.1",
  "pydantic>=2,<3",
  "numpy>=1.26,<2",
  "pywebview>=5.0,<6",
  "pupil-labs-realtime-api>=1.6.2",
  "real-time-screen-gaze>=1.0.0",
  "opencv-python>=4.8",
  "Pillow>=9.0",
  "reportlab>=4.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",            # optional linter/formatter
  "pytest>=8"             # optional tests
]

[project.scripts]
gazedeck = "gazedeck.main:main"
