[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gazedeck"
version = "0.1.0"
description = "Vendor-agnostic gaze tracking pipeline with AprilTag pose estimation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic >= 2.6, < 3",
    "websockets >= 12, < 13",
    "opencv-python >= 4.9, < 5",
    "pupil-apriltags >= 1.0, < 2",
    "pupil-labs-realtime-api >= 1.0, < 2",
    "numpy >= 1.26, < 3",
    "typer[all] >= 0.12, < 1",
    "pyyaml >= 6, < 7",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8, < 9",
    "pytest-asyncio >= 0.23, < 1",
    "ruff >= 0.4, < 1",
    "mypy >= 1.10, < 2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gazedeck*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C90", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "RET", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
